kubernetes/staging/nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: phpunitgen-nginx-staging
spec:
  ports:
  - name: web
    port: 80
    targetPort: 80
  selector:
    phpunitgen: phpunitgen-nginx-staging
status:
  loadBalancer: {}
